develop/css/styles.css
/**------------------- 
**      RESET
--------------------*/
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
  margin: 0;
}
h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}
/* set up the body */
body {
  font-family: var(--ff-sans-normal);
  font-size: var(--fs-400);
  color: hsl(var(--clr-white));
  background-color: hsl(var(--clr-dark));
  line-height: 1.5;
  min-height: 100vh;
  display: grid;
  grid-template-rows: min-content 1fr;
}
/* make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}
/* make form elements easier to work with */
input,
button,
textarea,
select {
  font: inherit;
}
/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/**------------------- 
**   CUSTOM PROPS
--------------------*/
:root {
  /* COLORS */
  --clr-dark-blue: 238, 29%, 16%;
  --clr-soft-red: 14, 88%, 65%;

  --clr-soft-violet: 273, 75%, 66%;
  --clr-soft-blue: 240, 73%, 65%;

  --clr-dark-grayish-blue: 240, 6%, 50%;
  --clr-very-dark-grayish-blue: 237, 12%, 33%;
  --clr-light-grayish-blue: 240, 5%, 91%;

  /* FONT FAMILIES */
  --ff-kumbh-sans: 'Kumbh Sans', sans-serif;

  /* FONT SIZES */
  --fs-default: 0.75rem;

  /* FONT WEIGHTS */
  --fw-regular: 400;
  --fw-bold: 700;

  /* BREAKPOINTS */
  --bp-mobile: 23.4375em;
  --bp-tablet: 48em;
  --bp-desktop: 90em;
}

/**------------------- 
**     GENERAL
--------------------*/
body {
  background-image: linear-gradient(
    to bottom,
    hsl(var(--clr-soft-violet)),
    hsl(var(--clr-soft-blue))
  );
  font-family: var(--ff-kumbh-sans);
  font-size: var(--fs-default);
}

.main {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 100vw;
  height: 100vh;
}

/**------------------- 
**    UTILITIES
--------------------*/
.hidden {
  display: none !important;
}

.active--question {
  color: hsl(var(--clr-very-dark-grayish-blue));
  font-weight: var(--fw-bold);
}

.active--down-arrow {
  transform: rotate(180deg);
}

/**------------------- 
**       FAQ
--------------------*/
.faq {
  background-color: white;
  border-radius: 1.25rem;
  padding: 6.25rem 1.25rem 2.5rem;
  position: relative;
  width: var(--bp-mobile);
}

@media only screen and (min-width: 48em) {
  .faq {
    display: grid;
    grid-template-columns: 1fr 1fr;

    min-height: 26.188rem;
    overflow: hidden;
    width: var(--bp-tablet);
  }
}

@media only screen and (min-width: 90em) {
  .faq {
    min-height: 29.188rem;
    width: 62.5rem;
  }
}

/* images */
.faq__image-woman {
  position: absolute;
  top: -5.5625rem;
  left: 2.6875rem;

  width: 12.5rem;
  z-index: 10;
}

@media only screen and (min-width: 48em) {
  .faq__image-woman {
    top: 3.6875rem;
    left: -3.5rem;

    width: 24rem;
  }
}

@media only screen and (min-width: 90em) {
  .faq__image-woman {
    top: 2.688rem;
    left: -5.2rem;

    width: 29rem;
  }
}

.faq__image-shadow {
  position: absolute;
  top: 0.063rem;
  left: 2.75rem;
  width: 12.5rem;
}

@media only screen and (min-width: 48em) {
  .faq__image-shadow {
    top: -10.5rem;
    left: -22.0625rem;

    width: 42rem;
  }
}

@media only screen and (min-width: 48em) {
  .faq__image-shadow {
    top: -8.5rem;
    left: -19.062rem;

    width: 42rem;
  }
}

/* faq content */
@media only screen and (min-width: 48em) {
  .faq__content {
    grid-column: 2 / 3;
  }
}

/* header */
.faq__header {
  font-weight: var(--fw-bold);
  font-size: 2rem;
  text-align: center;
  margin-bottom: 1rem;
}

@media only screen and (min-width: 48em) {
  .faq__header {
    text-align: start;
  }
}

@media only screen and (min-width: 90em) {
  .faq__header {
    font-size: 2.375rem;
  }
}

/* questions and answers */
.faq__qna {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.7rem;

  border-bottom: 1px solid hsl(var(--clr-light-grayish-blue));
  cursor: pointer;
  margin-bottom: 1rem;
  padding-bottom: 0.7rem;
  position: relative;
}

@media only screen and (min-width: 48em) {
  .faq__qna {
    min-width: 18.75rem;
  }
}

.wrapper {
  background-color: transparent;
  border: none;
}

.question {
  color: hsl(var(--clr-dark-grayish-blue));
}

@media only screen and (min-width: 48em) {
  :root {
    --fs-default: 0.9375rem;
  }
}

@media only screen and (min-width: 90em) {
  :root {
    --fs-default: 1.25rem;
  }
}

.question:hover {
  color: hsl(var(--clr-soft-red));
}

.icon-arrow-down {
  position: absolute;
  top: 0.4375rem;
  right: 0;

  transition: all 0.2s;
}

@media only screen and (min-width: 48em) {
  .icon-arrow-down {
    top: 0.4375rem;
    right: 1px;
  }
}

.answer {
  color: hsl(var(--clr-dark-grayish-blue));
  font-size: 0.6875rem;
}

@media only screen and (min-width: 48em) {
  .answer {
    font-size: 13px;
  }
}

@media only screen and (min-width: 90em) {
  .answer {
    font-size: 15px;
  }
}

